# Product-Image-Quality-Scoring

./: Dockerfile  Makefile  README.md
Product-Image-Quality-Scoring/: pyproject.toml
Product-Image-Quality-Scoring/product_image_quality_scoring/: __init__.py
product_image_quality_scoring/: dataset.py  features.py  plots.py
product_image_quality_scoring/modeling/: loss.py  metric.py  model.py  predict.py  train.py
