[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product_image_quality_scoring"
version = "0.0.1"
description = "An end-to-end machine learning pipeline that scores product image quality using a deep learning model. Built with PyTorch, Prefect, MLflow, and Docker."
authors = [
  { name = "Nathaniel Rice-Canetto" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "awscli",
    "pip",
    "pytest",
    "python-dotenv",
    "tqdm",
    "typer",
    "ruff",
    "torch>=2.1",
    "torchvision>=0.18",
    "fastapi>=0.95",
    "uvicorn>=0.22",
    "mlflow>=2.6",
    "prefect>=2.10",
    "pillow>=10.0",
    "pandas>=2.2",
    "scikit-learn>=2.2",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "python-multipart>=0.0.6"
]

requires-python = "==3.12.1"


[tool.ruff]
line-length = 99
src = ["product_image_quality_scoring"]
include = ["pyproject.toml", "product_image_quality_scoring/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["product_image_quality_scoring"]
force-sort-within-sections = true

